# ocr

./: README.md  pyproject.toml
tessaractocr/: run.py
tests/: test_tessaractocr.py
